Fix related card visibility when adding first or removing last related card

--- a/client/app/shared/components/related-cards/related-cards.component.scss
+++ b/client/app/shared/components/related-cards/related-cards.component.scss
@@ -30,7 +30,7 @@
     button {
         opacity: 0;
         position: absolute;
-        top: 10px;
+        bottom: 10px;
 
         &.right {
             right: 10px;
